moje upravy na osobnu stranku jamesa bonda

--- a/contact-us.html
+++ b/contact-us.html
@@ -39,8 +39,7 @@
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
         
-
-    <header class="navbar navbar-inverse navbar-fixed-top" role="banner">
+ <header class="navbar navbar-inverse navbar-fixed-top" role="banner">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -54,24 +53,22 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about-us.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="about-us.html">About Me</a></li>
+                    <li><a href="services.html">Bydlisko</a></li>
+                    <li><a href="portfolio.html">Zamestnanie</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Misie <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="full-width.html">Full Width Page</a></li>
-                            <li><a href="#">Dropdown Menu 1</a></li>
-                            <li><a href="#">Dropdown Menu 2</a></li>
-                            <li><a href="#">Dropdown Menu 3</a></li>
-                            <li><a href="#">Dropdown Menu 4</a></li>
+                            <li><a href="portfolio-item.html">brazilia</a></li>
+                            <li><a href="portfolio-item.html">nemecko</a></li>
+                            <li><a href="portfolio-item.html">rusko</a></li>
+                            <li><a href="portfolio-item.html">japonsko</a></li>
+                            <li><a href="portfolio-item.html">cina</a></li>
                             <li class="divider"></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Terms of Use</a></li>
+                            <li><a href="portfolio-item.html">Doma v britanii</a></li>
                         </ul>
                     </li>
-                    <li><a href="blog.html">Blog</a></li> 
-                    <li class="active"><a href="contact-us.html">Contact</a></li>
+                    <li class="active"><a href="contact-us.html">Kontakt</a></li>
                 </ul>
             </div>
         </div>
@@ -82,7 +79,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<h1>Contact Us</h1>
+						<h1>Kontakt</h1>
 					</div>
 				</div>
 			</div>
@@ -110,7 +107,7 @@
         <div class="section">
 	    	<div class="container">
 	        	<div class="row">
-					<h3>Get in Touch with Us</h3>
+					<h3>momentalne sa nachadzam na misii v san franciscu, ale ked sa vratim mozte ma kontaktovat na:</h3>
 					</hr>
 	        		<div class="col-sm-6">
 	        			<!-- Contact Info -->
