--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>BASICA! A Free Bootstrap3 HTML5 CSS3 Template by Vactual Art</title>
+    <title>Osobna stranka</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -54,24 +54,22 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="about-us.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="about-us.html">About Me</a></li>
+                    <li><a href="services.html">Bydlisko</a></li>
+                    <li><a href="portfolio.html">Zamestnanie</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Misie <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Dropdown Menu 1</a></li>
-                            <li><a href="#">Dropdown Menu 2</a></li>
-                            <li><a href="#">Dropdown Menu 3</a></li>
-                            <li><a href="#">Dropdown Menu 4</a></li>
-                            <li><a href="#">Dropdown Menu 5</a></li>
+                            <li><a href="portfolio-item.html">brazilia</a></li>
+                            <li><a href="portfolio-item.html">nemecko</a></li>
+                            <li><a href="portfolio-item.html">rusko</a></li>
+                            <li><a href="portfolio-item.html">japonsko</a></li>
+                            <li><a href="portfolio-item.html">cina</a></li>
                             <li class="divider"></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Terms of Use</a></li>
+                            <li><a href="portfolio-item.html">Doma v britanii</a></li>
                         </ul>
                     </li>
-                    <li><a href="blog.html">Blog</a></li> 
-                    <li><a href="contact-us.html">Contact</a></li>
+                    <li><a href="contact-us.html">Kontakt</a></li>
                 </ul>
             </div>
         </div>
@@ -93,8 +91,8 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="carousel-content centered">
-                                    <h2 class="animation animated-item-1">Welcome to BASICA! A Bootstrap3 Template</h2>
-                                    <p class="animation animated-item-2">Sed mattis enim in nulla blandit tincidunt. Phasellus vel sem convallis, mattis est id, interdum augue. Integer luctus massa in arcu euismod venenatis. </p>
+                                    <h2 class="animation animated-item-1">Vitajte na mojej stranke</h2>
+                                    <p class="animation animated-item-2">citte sa tu ako doma</p>
                                 </div>
                             </div>
                         </div>
@@ -105,10 +103,10 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="carousel-content center centered">
-                                    <h2 class="animation animated-item-1">Powerful and Responsive HTML Template</h2>
-                                    <p class="animation animated-item-2">Phasellus adipiscing felis a dictum dictum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at ligula risus. </p>
+                                    <h2 class="animation animated-item-1">Dozviete sa tu o mne vsetko potrebne</h2>
+                                    <p class="animation animated-item-2">napriklad ze mam rad martini pretrepat nemiesat</p>
                                     <br>
-                                    <a class="btn btn-md animation animated-item-3" href="#">Learn More</a>
+                                    <a class="btn btn-md animation animated-item-3" href="about-us.html">Citat viac</a>
                                 </div>
                             </div>
                         </div>
@@ -119,10 +117,10 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="carousel-content centered">
-                                    <h2 class="animation animated-item-1">Works Seamlessly Well on All Devices</h2>
-                                    <p class="animation animated-item-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae euismod lacus. Maecenas in tempor lectus. Nam mattis, odio ut dapibus ornare, libero. </p>
+                                    <h2 class="animation animated-item-1">Ked ma chcete kontaktovat volajte na cislo</h2>
+                                    <p class="animation animated-item-2"> - 77 88 35 82 </p>
                                     <br>
-									<a class="btn btn-md animation animated-item-3" href="#">Learn More</a>
+									<a class="btn btn-md animation animated-item-3" href="contact-us.html">Viac kontaktov</a>
                                 </div>
                             </div>
                         </div>
@@ -145,7 +143,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="calltoaction-wrapper">
-							<h3>Welcome to <span style="color:#aec62c; text-transform:uppercase;font-size:24px;">Basica!</span> A free fully responsive Bootstrap 3 HTML5 template!</h3> <a href="http://www.vactualart.com/portfolio-item/basica-a-free-html5-template/" class="btn btn-orange">Download here!</a>
+							<h3><span style="color:#aec62c; text-transform:uppercase;font-size:24px;">Nech sa paci, </span> tu si mozte stiahnut moj zivotopis: </h3> <a href="cv.docx" class="btn btn-orange">Tu stiahnut!</a>
 						</div>
 					</div>
 				</div>
@@ -161,25 +159,25 @@
 	        		<div class="col-md-4 col-sm-6">
 	        			<div class="service-wrapper">
 		        			<i class="icon-home"></i>
-		        			<h3>Aliquam in adipiscing</h3>
-		        			<p>Praesent rhoncus mauris ac sollicitudin vehicula. Nam fringilla turpis turpis, at posuere turpis aliquet sit amet condimentum</p>
-		        			<a href="#" class="btn">Read more</a>
+		        			<h3>Bydlisko</h3>
+		        			<p>byvam v roznych hoteloch po svete, ale ak som zrovna neni na misii byvam v roznych hoteloch v londyne</p>
+		        			<a href="services.html" class="btn">Citaj viac</a>
 		        		</div>
 	        		</div>
 	        		<div class="col-md-4 col-sm-6">
 	        			<div class="service-wrapper">
 		        			<i class="icon-briefcase"></i>
-		        			<h3>Curabitur mollis</h3>
-		        			<p>Suspendisse eget libero mi. Fusce ligula orci, vulputate nec elit ultrices, ornare faucibus orci. Aenean lectus sapien, vehicula</p>
-		        			<a href="#" class="btn">Read more</a>
+		        			<h3>Zamestnanie</h3>
+		        			<p>som agent 007 s povolenim zabijat</p>
+		        			<a href="portfolio.html" class="btn">Citaj viac</a>
 		        		</div>
 	        		</div>
 	        		<div class="col-md-4 col-sm-6">
 	        			<div class="service-wrapper">
 		        			<i class="icon-calendar"></i>
-		        			<h3>Vivamus mattis</h3>
-		        			<p>Phasellus posuere et nisl ac commodo. Nulla facilisi. Sed tincidunt bibendum cursus. Aenean vulputate aliquam risus rutrum scelerisque</p>
-		        			<a href="#" class="btn">Read more</a>
+		        			<h3>Uspesne misie</h3>
+		        			<p>tu si mozte prezriet zoznam mojich misii</p>
+		        			<a href="portfolio-item.html" class="btn">Citaj viac</a>
 		        		</div>
 	        		</div>
 	        	</div>
@@ -197,7 +195,7 @@
 	        	<div class="row">
 	
 				<div class="section-title">
-				<h1>Our Recent Works</h1>
+				<h1>Misie</h1>
 				</div>
 		
 		
@@ -206,9 +204,9 @@
 					<figure>
 						<img src="img/portfolio/4.jpg" alt="img04">
 						<figcaption>
-							<h3>Settings</h3>
-							<span>Jacob Cummings</span>
-							<a href="portfolio-item.html">Take a look</a>
+							<h3>missia</h3>
+							<span>V brazilii</span>
+							<a href="portfolio-item.html">zisti viac</a>
 						</figcaption>
 					</figure>
 	        	</div>	
@@ -216,9 +214,9 @@
 					<figure>
 						<img src="img/portfolio/1.jpg" alt="img01">
 						<figcaption>
-							<h3>Camera</h3>
-							<span>Jacob Cummings</span>
-							<a href="portfolio-item.html">Take a look</a>
+							<h3>missia</h3>
+							<span>V nemecku</span>
+							<a href="portfolio-item.html">zisti viac</a>
 						</figcaption>
 					</figure>
 				</div>
@@ -226,9 +224,9 @@
 					<figure>
 						<img src="img/portfolio/2.jpg" alt="img02">
 						<figcaption>
-							<h3>Music</h3>
-							<span>Jacob Cummings</span>
-							<a href="portfolio-item.html">Take a look</a>
+							<h3>missia</h3>
+							<span>V rusku</span>
+							<a href="portfolio-item.html">zisti viac</a>
 						</figcaption>
 					</figure>
 				</div>
@@ -236,9 +234,9 @@
 					<figure>
 						<img src="img/portfolio/5.jpg" alt="img05">
 						<figcaption>
-							<h3>Safari</h3>
-							<span>Jacob Cummings</span>
-							<a href="portfolio-item.html">Take a look</a>
+							<h3>missia</h3>
+							<span>Vo svedsku</span>
+							<a href="portfolio-item.html">zisti viac</a>
 						</figcaption>
 					</figure>
 				</div>
@@ -246,9 +244,9 @@
 					<figure>
 						<img src="img/portfolio/3.jpg" alt="img03">
 						<figcaption>
-							<h3>Phone</h3>
-							<span>Jacob Cummings</span>
-							<a href="portfolio-item.html">Take a look</a>
+							<h3>missia</h3>
+							<span>Doma v britanii</span>
+							<a href="portfolio-item.html">zisti viac</a>
 						</figcaption>
 					</figure>
 				</div>
@@ -256,9 +254,9 @@
 					<figure>
 						<img src="img/portfolio/6.jpg" alt="img06">
 						<figcaption>
-							<h3>Game Center</h3>
-							<span>Jacob Cummings</span>
-							<a href="portfolio-item.html">Take a look</a>
+							<h3>missia</h3>
+							<span>V cine</span>
+							<a href="portfolio-item.html">zisti viac</a>
 						</figcaption>
 					</figure>
 				</div>
@@ -268,33 +266,6 @@
 	    </div>
 		<!-- Our Portfolio -->
 			
-<hr>
-
-		<!-- Our Clients -->
-	    <div class="section">
-	    	<div class="container">
-			
-				<div class="section-title">
-				<h1>Our Success Stories</h1>
-				</div>
-
-				<div class="clients-logo-wrapper text-center row">
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/logo-1.jpg" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/logo-2.jpg" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/logo-3.jpg" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/logo-4.jpg" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/logo-5.jpg" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/logo-6.jpg" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/logo-7.jpg" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/logo-8.jpg" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/logo-9.jpg" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/logo-10.jpg" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/logo-11.jpg" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/logo-12.jpg" alt="Client Name"></a></div>
-				</div>
-			</div>
-	    </div>
-	    <!-- End Our Clients -->
 
 	    <!-- Footer -->
 	    <div class="footer">
